# ChangeLog for net-analyzer/nikto
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nikto/ChangeLog,v 1.23 2007/12/28 10:48:14 dertobi123 Exp $

*nikto-2.01 (28 Dec 2007)

  28 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org> +nikto-2.01.ebuild:
  Version bump as per #199020, thanks to Frank Breedijk and Anton Bolshakov

  20 Oct 2007; Christian Hartmann <ian@gentoo.org> nikto-1.36.ebuild:
  Fixed bug #193916

  16 Jul 2007; Michael Cummings <mcummings@gentoo.org> nikto-1.36.ebuild:
  sparc stable

  09 Jul 2007; Raúl Porcel <armin76@gentoo.org> nikto-1.36.ebuild:
  x86 stable

  22 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> nikto-1.35.ebuild:
  Stable on sparc

  20 Mar 2007; Raúl Porcel <armin76@gentoo.org> nikto-1.35.ebuild:
  x86 stable

*nikto-1.36 (26 Feb 2007)

  26 Feb 2007; Michael Cummings <mcummings@gentoo.org> +nikto-1.36.ebuild:
  Bug 166960, version bump. Thanks Chaze

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  13 Aug 2005; Luis Medinas <metalgod@gentoo.org> nikto-1.35.ebuild:
  Added ~amd64 Keywords. Closes bug #102302.

*nikto-1.35 (30 May 2005)

  30 May 2005; Michael Cummings <mcummings@gentoo.org> +nikto-1.35.ebuild:
  Version bump to 1.35

*nikto-1.34-r2 (14 May 2005)

  14 May 2005; Michael Cummings <mcummings@gentoo.org>
  +nikto-1.34-r2.ebuild:
  Forgot to get the digest of the man added. Also bumped since the man page is
  a functional addition.

  14 May 2005; Michael Cummings <mcummings@gentoo.org> nikto-1.34-r1.ebuild:
  bug 84048, thanks to Michael Boman <michael.boman@gmail.com> for the
  updates. Adds man page for nikto.

*nikto-1.34-r1 (13 Mar 2005)

  13 Mar 2005; Michael Cummings <mcummings@gentoo.org>
  +nikto-1.34-r1.ebuild:
  Bug 70465: Andreas Kobara <abusch@gmx.net> points out that nikto no longer