@@ -1,17 +1,6 @@
-DIST nikto-1.31.tar.gz 166796 RMD160 208c030537d3266f057139a154ebc14908458925 SHA1 27cf86f92b4ae4d05ef6f66b901d5147ba5b0f9f SHA256 e659d4e34f697bd861c843571f8632c1cf0acc37372abe33af2f6c7ad8814846
-DIST nikto-1.32.tar.gz 345290 RMD160 3eecaecf9680375fd0e7020d5ed482b304451db6 SHA1 3d1909ccbd60e14f8a319d33c33830bdd8a6da61 SHA256 04a5811e7b9edc7f8571eae27bb2b24dbf1462814116a28c96598e5da4c3054b
-DIST nikto-1.34.man 17950 RMD160 d6ec2f95106db43a3c1e8b20c3ab873b5e07534d SHA1 7d2bb1642f5584eee0b30b87e10572d492a8d02f SHA256 1e7eed1cdbbbb395f65ec68f73c368644ca446d753b4594c4c73ad44a4a0a4e8
-DIST nikto-1.34.tar.gz 184320 RMD160 433e1f51164fd8b3145d667d4507147a00bfad39 SHA1 7e932bef107f3162d30425f698df652f522f653a SHA256 e3d0956cd5119d8619ba8ba6259a086275e88991f464b990ac35e489a2cb2dd8
-DIST nikto-1.35.tar.gz 190033 RMD160 9f7f4e0a1e21d88e25b6c7bbbf6468bb93dbc311 SHA1 3c1078f437449064a6c7e3702314a7850d4cd2af SHA256 f7d923589d4030649d8a4434d3c3098715b176d60385210441667ea1a0ba4f61
 DIST nikto-1.36.tar.gz 206921 RMD160 29aa7008a065ae5a2b39bc72f72fbddbc2665a51 SHA1 522487b04168d7646d456331fa5fc5434b4af15f SHA256 a5c7f10e73b3ab9d262732a1377902589a7cde268666db892cc59f4b00e1bedc
-DIST nikto-2.01.tar.bz2 194730 RMD160 5706244c813e63cd0e0081bc7761a032b1ba0b7a SHA1 83a7e2f18de2c35dfd5c55be6f8b4ef82085a60a SHA256 f88493c3691034e8d56c0afbf3343438ff0d37cdfac26ee7d0bff480dbd9afcd
-EBUILD nikto-1.31.ebuild 1401 RMD160 c7146755b3f1c924550488a74fbdef1763a0fe0a SHA1 fb4d949de58f239b2c0bb34f1b43f28bfa4479a2 SHA256 dd93917bfc11a2e4d7bbe9a455b3fa852bfedac9d16a8833fd24463a7f73879a
-EBUILD nikto-1.32.ebuild 1406 RMD160 1b0424d0085ab4347e9552423834ee29c243423a SHA1 d37987d125d17bcfe77ced570f5cb033ccd8695c SHA256 80f2efa2966d213fc948b4c0a593cc5416d0fac51c6f655c9ff97d9cce30e05a
-EBUILD nikto-1.34-r1.ebuild 1416 RMD160 8a640ddff5ac80c026442f3ec985bbf4d934f3af SHA1 0da0fb03a44dfd8332721b443298aa8ad85bf0a6 SHA256 f3c37222c3ab2495bdf6bf228b0ae59191bb19d496dde27b0b1ce5cc9e381568
-EBUILD nikto-1.34-r2.ebuild 1416 RMD160 2ec8a669d9eb6a2105df6c48aaae0d3b899e4fb4 SHA1 3dc10450b7fd8152ac46c2d1490d9c794de37781 SHA256 13e25d9ff4a059e7482d8a9b641609fe092757e2c95b2b3f7f23e2332e2f4b7d
-EBUILD nikto-1.34.ebuild 1334 RMD160 ed1573e058e135799ab5f8d58c4d7bec796813ba SHA1 f5560adfe12f91979541cab14e5e7b760d0a20ba SHA256 210c481449d4571a88681a5b8a9ce9a28becf427e0b2f93be8f5216d527289e8
-EBUILD nikto-1.35.ebuild 1387 RMD160 ae7af96fa9ff644f08f096fce7cfe1ee0270f3a9 SHA1 7e9bb468e3ec82dfbcef15c9369b5ea1402ee6ca SHA256 99bd1b9d69abed4c4904066fa901a09af3629efd6ff6560e76dc11efa3bfecc5
+DIST nikto-2.03.tar.bz2 399643 RMD160 977bb791115c54259766db10602c7000e7882bda SHA1 24211a3be1a66b7304abf77fcdd9f1ac9909ec72 SHA256 61b78434560c5c311f38c47e7e6816012c9c83a3cfdf4a978ceaaf34718a3b73
 EBUILD nikto-1.36.ebuild 1383 RMD160 87fa6af1e086e36764d369bea58be4ea959ec44f SHA1 d835baebdc59e712c77775bb2b1c6137d64cb90f SHA256 1b78d3eb2ca68064756bce809009242f9cc0a39398a66cb9bb7509431662e95a
-EBUILD nikto-2.01.ebuild 1408 RMD160 f7cb1e56ced085b8e778e63ad7b3dccac793776a SHA1 ee0a43b6f7bcc62c00c7a52d9cbb24312dc6e064 SHA256 e52aa76683766c216c105bd7b67a4acf0fb7ff77787140f20b8bba340faaca23
-MISC ChangeLog 3290 RMD160 ea53c90686847af91832a302ff7e92321b934a2a SHA1 89c0aa7aa9ac18daf1c9b0c435d936bc7a447509 SHA256 56198be1e50dd2c4719b4a0c510863b03e801b46343b691fcb776313facdf45a
+EBUILD nikto-2.03.ebuild 1279 RMD160 d20293bb47267aa9e546c1247ebbc767cbaaed71 SHA1 2bf88cc448a021863159f3bd11ce2587b8ef7ba5 SHA256 4eb3566b3b6184f372d1bc0a12d5c6f49512ce48960cccf232bd5572c0f6c444
+MISC ChangeLog 3580 RMD160 720f33db07a8eac6c8988a820401d4596c315476 SHA1 967602b3b0bd11dccd98de1fb82ed1e386f7bd8c SHA256 52b5df935c49e28cbce13e812b04dbdeca227648b9f032dd4c6dc487d77cf809
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
