@@ -1,6 +1,14 @@
 # ChangeLog for net-analyzer/nikto
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nikto/ChangeLog,v 1.23 2007/12/28 10:48:14 dertobi123 Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nikto/ChangeLog,v 1.24 2009/03/20 16:02:06 dertobi123 Exp $
+
+*nikto-2.03 (20 Mar 2009)
+
+  20 Mar 2009; Tobias Scherbaum <dertobi123@gentoo.org> -nikto-1.31.ebuild,
+  -nikto-1.32.ebuild, -nikto-1.34.ebuild, -nikto-1.34-r1.ebuild,
+  -nikto-1.34-r2.ebuild, -nikto-1.35.ebuild, -nikto-2.01.ebuild,
+  +nikto-2.03.ebuild:
+  Version bump (#208165), Cleanup
 
 *nikto-2.01 (28 Dec 2007)
 
